--- a/style.css
+++ b/style.css
@@ -1,23 +1,43 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
 }
-.SITE{
+
+.CENTER-SITE {
+    background-color: #fdff98;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.SITE-FLOATING {
     background-color: grey;
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
 }
-.header{
+
+.SITE-BOX {
+    background-color: yellow;
+    width: 935px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header {
+    box-sizing: border-box;
     height: 40px;
     width: 100%;
     background-color: green;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #DBDBDB
+    border: 1px solid #DBDBDB;
+    position: fixed;
+    z-index: 1;
 }
-.header-objects{
+
+.header-objects {
     width: 935px;
     height: 28px;
     background-color: aqua;
@@ -25,7 +45,8 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-.logos{
+
+.logos {
     display: flex;
     justify-content: space-between;
     width: 140px;
@@ -33,22 +54,25 @@ body{
     align-items: center;
     background-color: red;
 }
-.logos img{
+
+.logos img {
     height: 100%;
 }
 
-.header-logos{
+.header-logos {
     display: flex;
 }
-ion-icon{
+
+ion-icon {
     font-size: 22px;
 }
-.vl{
+
+.vl {
     border-left: 1px solid #DBDBDB;
     height: 22px;
 }
 
-.header-search{
+.header-search {
     box-sizing: border-box;
     width: 215px;
     height: 28px;
@@ -59,13 +83,14 @@ ion-icon{
     background-color: #FAFAFA;
     border-radius: 2px;
 }
-.header-search p{
+
+.header-search p {
     color: #979797;
     font-weight: 400;
     font-size: 12px;
 }
 
-.icons{
+.icons {
     background-color: red;
     width: 140px;
     height: 28px;
@@ -74,22 +99,156 @@ ion-icon{
     align-items: center;
 }
 
-.header-icons{
-    font-size: 22px;   
+.header-icons {
+    font-size: 22px;
 }
 
-.container-stories{
+.side-bar {
+    width: 293px;
+    height: 400px;
+    background-color: cornflowerblue;
+}
+
+.CONTAINER-RIGHT {
+    margin-top: 88px;
+    background-color: greenyellow;
+    width: 293px;
+    height: 210px;
+    position: fixed;
+    right: calc((100% - 935px)/2);
+}
+
+.CONTAINER-LEFT {
+    background-color: purple;
+    width: 614px;
+}
+
+.container-stories {
     background-color: orange;
     width: 614px;
     height: 118px;
+    margin-top: 88px;
+    margin-bottom: 24px;
 }
 
-.container-posts{
+.container-posts {
     background-color: blue;
     width: 614px;
+    display: flex;
+    flex-direction: column;
 }
-.posts{
+
+.posts {
+    box-sizing: border-box;
     background-color: aquamarine;
-    width: 100%;
+    width: 614px;
     height: 749px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 60px;
+    border: 1px solid #DBDBDB;
+}
+
+.post-header {
+    box-sizing: border-box;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: rgb(30, 255, 30);
+    width: 614px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post-header h1 {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16.41px;
+    color: #262626;
+}
+
+.post-header img {
+    width: 32px;
+    height: 32px;
+}
+
+.post-header p {
+    font-weight: bold;
+}
+.post-picture{
+    width: 612px;
+    height: 612px;
+}
+
+.post-picture img {
+    width: 612px;
+    height: 612px;
+}
+
+.post-owner {
+    background-color: #be5a5a;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.post-owner img{
+    margin-right: 10px;
+}
+
+.post-actions {
+    box-sizing: border-box;
+    background-color: coral;
+    box-sizing: border-box;
+    padding: 5px 10px;
+    width: 614px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.actions-left {
+    display: flex;
+    justify-content: space-between;
+    background-color: red;
+    width: 100px;
+}
+
+.post-reactions {
+    box-sizing: border-box;
+    background-color: #be5a5a;
+    padding: 10px 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.post-reactions img {
+    width: 20px;
+    height: 20px;
+}
+
+.post-reactions h1 {
+    margin-left: 5px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16.41px;
+}
+
+.sidebar-header{
+    display: flex;
+    align-items: center;
+}
+.sidebar-header img{
+    margin-right: 10px;
+}
+.sidebar-header h1{
+    font-weight: 500;
+    font-size: 14px;
+    color:#262626;
+}
+.sidebar-header h2{
+    font-weight: 300;
+    font-size: 14px;
+    color:#8E8E8E;
 }
