--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #FAFAFA;
 }
 
 .CENTER-SITE {
-    background-color: #fdff98;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,24 +11,22 @@ body {
 }
 
 .SITE-FLOATING {
-    background-color: grey;
     width: 100%;
     height: 100%;
     display: flex;
 }
 
 .SITE-BOX {
-    background-color: yellow;
     width: 935px;
     display: flex;
     justify-content: space-between;
 }
 
 .header {
+    background-color: #FFFFFF;
     box-sizing: border-box;
     height: 40px;
     width: 100%;
-    background-color: green;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,7 +38,6 @@ body {
 .header-objects {
     width: 935px;
     height: 28px;
-    background-color: aqua;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -52,7 +49,6 @@ body {
     width: 140px;
     height: 28px;
     align-items: center;
-    background-color: red;
 }
 
 .logos img {
@@ -73,6 +69,7 @@ ion-icon {
 }
 
 .header-search {
+    background-color: #FAFAFA;
     box-sizing: border-box;
     width: 215px;
     height: 28px;
@@ -80,8 +77,7 @@ ion-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #FAFAFA;
-    border-radius: 2px;
+    border-radius: 3px;
 }
 
 .header-search p {
@@ -91,7 +87,6 @@ ion-icon {
 }
 
 .icons {
-    background-color: red;
     width: 140px;
     height: 28px;
     display: flex;
@@ -105,13 +100,11 @@ ion-icon {
 
 .side-bar {
     width: 293px;
-    height: 400px;
-    background-color: cornflowerblue;
+    height: 00px;
 }
 
 .CONTAINER-RIGHT {
     margin-top: 88px;
-    background-color: greenyellow;
     width: 293px;
     height: 210px;
     position: fixed;
@@ -119,28 +112,65 @@ ion-icon {
 }
 
 .CONTAINER-LEFT {
-    background-color: purple;
     width: 614px;
 }
 
 .container-stories {
-    background-color: orange;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    border: 1px solid #DBDBDB;
+    border-radius: 3px;
+    overflow:hidden;
     width: 614px;
     height: 118px;
     margin-top: 88px;
     margin-bottom: 24px;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.story {
+    width: 66px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 15px;
+}
+
+.story p {
+    font-size: 12px;
+    font-weight: 400;
+    margin-top: 5px;
+    color: #262626;
+    letter-spacing: -0.04em;
+}
+
+.container-story-img {
+    position: relative;
+}
+
+.story-bg {
+    width: 66px;
+    height: 66px;
+}
+
+.story-img {
+    width: 56px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
 
 .container-posts {
-    background-color: blue;
     width: 614px;
     display: flex;
     flex-direction: column;
 }
 
 .posts {
+    background-color: #FFFFFF;
     box-sizing: border-box;
-    background-color: aquamarine;
     width: 614px;
     height: 749px;
     display: flex;
@@ -148,13 +178,13 @@ ion-icon {
     justify-content: space-between;
     margin-bottom: 60px;
     border: 1px solid #DBDBDB;
+    border-radius: 3px;
 }
 
 .post-header {
     box-sizing: border-box;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: rgb(30, 255, 30);
     width: 614px;
     height: 70px;
     display: flex;
@@ -177,7 +207,8 @@ ion-icon {
 .post-header p {
     font-weight: bold;
 }
-.post-picture{
+
+.post-picture {
     width: 612px;
     height: 612px;
 }
@@ -188,18 +219,17 @@ ion-icon {
 }
 
 .post-owner {
-    background-color: #be5a5a;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.post-owner img{
+
+.post-owner img {
     margin-right: 10px;
 }
 
 .post-actions {
     box-sizing: border-box;
-    background-color: coral;
     box-sizing: border-box;
     padding: 5px 10px;
     width: 614px;
@@ -210,13 +240,11 @@ ion-icon {
 .actions-left {
     display: flex;
     justify-content: space-between;
-    background-color: red;
     width: 100px;
 }
 
 .post-reactions {
     box-sizing: border-box;
-    background-color: #be5a5a;
     padding: 10px 10px;
     display: flex;
     justify-content: flex-start;
@@ -235,20 +263,86 @@ ion-icon {
     line-height: 16.41px;
 }
 
-.sidebar-header{
+.sidebar-header {
     display: flex;
     align-items: center;
 }
-.sidebar-header img{
+
+.sidebar-header img {
     margin-right: 10px;
 }
-.sidebar-header h1{
+
+.sidebar-header h1 {
     font-weight: 500;
     font-size: 14px;
-    color:#262626;
+    color: #262626;
 }
-.sidebar-header h2{
+
+.sidebar-header h2 {
     font-weight: 300;
     font-size: 14px;
-    color:#8E8E8E;
+    color: #8E8E8E;
+}
+
+.suggestions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.suggestions h1 {
+    font-weight: 500;
+    font-size: 12px;
+    color: #8E8E8E;
+}
+
+.suggestions h2 {
+    font-weight: 500;
+    font-size: 12px;
+    color: #262626;
+}
+
+.suggestions-follow {
+    display: flex;
+    height: 40px;
+    margin-top: 10px;
+    align-items: center;
+}
+
+.suggestions-follow img {
+    width: 32px;
+    height: 32px;
+    margin-right: 5px;
+}
+
+.profile-name h1 {
+    font-weight: 500;
+    font-size: 14px;
+    color: #262626;
+    margin-bottom: 3px;
+}
+
+.profile-name h2 {
+    font-weight: 400;
+    font-size: 14px;
+    color: #8e8e8e;
+}
+
+.suggestions-follow p {
+    position: absolute;
+    right: 0px;
+    font-weight: 500;
+    font-size: 12px;
+    color: #139EF2;
+}
+
+.container-sidebar-footer {
+    margin-top: 20px;
+    font-size: 11px;
+    line-height: 12.89px;
+    font-weight: 400;
+    color: #C7C7C7;
+}
+
+.sidebar-footer {
+    margin-bottom: 20px;
 }
