--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     align-items: center;
     border: 1px solid #DBDBDB;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header-objects {
@@ -98,15 +98,10 @@ ion-icon {
     font-size: 22px;
 }
 
-.side-bar {
-    width: 293px;
-    height: 00px;
-}
 
 .CONTAINER-RIGHT {
     margin-top: 88px;
     width: 293px;
-    height: 210px;
     position: fixed;
     right: calc((100% - 935px)/2);
 }
@@ -129,6 +124,16 @@ ion-icon {
     display: flex;
     align-items: center;
 }
+.setinha{
+    position: absolute;
+    top:46px;
+    right:5px;
+    z-index: 1;
+    width: 26px;
+    height: 26px;
+    color: white;
+    filter: drop-shadow(-1px 3px 3px #888888);
+}
 
 .story {
     width: 66px;
@@ -143,7 +148,7 @@ ion-icon {
     font-weight: 400;
     margin-top: 5px;
     color: #262626;
-    letter-spacing: -0.04em;
+
 }
 
 .container-story-img {
@@ -345,4 +350,36 @@ ion-icon {
 
 .sidebar-footer {
     margin-bottom: 20px;
+}
+
+@media (max-width: 934px){
+    .CONTAINER-RIGHT{
+        display: none;
+    }
+    .SITE-BOX{
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+@media (max-width: 613px){
+
+    .CENTER-SITE {
+        background-color: cyan;
+    }
+    
+    .SITE-FLOATING {
+        background-color: black;        
+    }
+    
+    .SITE-BOX {
+        background-color: purple;
+    }
+    .CONTAINER-LEFT{
+        background-color: green;
+        width: 100%;
+    }
+    .CONTAINER-RIGHT{
+        background-color: yellow;
+    }
 }
