--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 }
 
 .header-objects {
+    box-sizing: border-box;
     width: 935px;
     height: 28px;
     display: flex;
@@ -176,13 +177,14 @@ ion-icon {
 .container-posts {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .posts {
     background-color: #FFFFFF;
     box-sizing: border-box;
     width: 614px;
-    height: 799px;
+    height: 749px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -192,12 +194,11 @@ ion-icon {
 }
 
 .post-header {
-    background-color: green;
     box-sizing: border-box;
     padding-left: 10px;
     padding-right: 10px;
     width: 614px;
-    height: 70px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -230,17 +231,7 @@ ion-icon {
 }
 
 .post-video{
-    box-sizing: border-box;
-    width: 612px;
-    height: 612px;
     background-color: black;
-    display: flex;
-    align-items: center;
-}
-
-.post-video video{
-    width: 612px;
-    height: 612px;
 }
 
 .post-owner {
@@ -287,11 +278,17 @@ ion-icon {
     font-size: 14px;
     line-height: 16.41px;
 }
+.comment{
+    display: flex;
+}
 .post-comments{
     background-color: #139EF2;
-    height: 50px;
+    height: 30px;
     box-sizing: border-box;
     padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .post-comments h1 {
     font-weight: 500;
@@ -299,6 +296,17 @@ ion-icon {
     line-height: 16.41px;
 }
 
+.post-comments h2 {
+    margin-left: 3px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16.41px;
+}
+
+.like-button:hover{
+    color:red;
+    filter: drop-shadow(1px 1px 0.5px);
+}
 .sidebar-header {
     display: flex;
     align-items: center;
@@ -391,6 +399,13 @@ ion-icon {
         justify-content: center;
         width: 100%;
     }
+
+    .header-objects {
+        box-sizing: border-box;
+        padding: 0px 10px;
+        width: 100%;
+        height: 28px;
+    }
 }
 
 @media (max-width: 613px){
@@ -454,15 +469,13 @@ ion-icon {
         height: auto;
     }
 
-    .post-video{
-        width: 100%;
-        height: auto;
-    }  
-
-    .post-video video{
-        width: 100%;
-        height: auto;
+    .post-video {
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        background-color: black;
     }
+
     .header-search{
         display: none;
     }
